[Feature] 카카오 로그인 추가 구현 및 작동 확인 (#14)
* refactor: 카카오 로그인 관련 리팩토링 (#12)

* feat: 로그 추가 (#12)

* refactor: 방식 변경 (#12)

* chore: 예외 처리 경로 수정 (#12)

* chore: 임시 docker-compose.yml 설정 (#12)

* chore: 레디스 관련 설정 업데이트 (#12)

* chore: 명시적인 메서드명으로 변경 (#12)